--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     
   </head>
   <body>
-    <h1>Ciao Fede</h1>
+    <h1>Ciao Fede sei fuori dal castello bello</h1>
+    <img src="castello-bello.jpg" />
+    <p>Cosa vuoi fare?</p>
+    <a href="fossato.html">Salta il fossato</a> oppure <a href="entra.html">entra nel castello</a>
   </body>
 </html>
